--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="styles.css">
 	<title>Vicious Cycles</title>
 	<meta charset="utf-8">
+	<style>
+		body{background-color:#E7FBFB}
+	</style>
 </head>
 <body>
 	<h1>Vicious Cycles</h1>
